Add post install script, move python packages out of container definition

--- a/devcontainer.json
+++ b/devcontainer.json
@@ -4,6 +4,7 @@
 		"dockerfile": "Dockerfile",
 		"context": "../"
 	},
+	"postCreateCommand": "postCreateCommand.sh",
 	"customizations": {
 		"vscode": {
 			"extensions": [
