--- a/devcontainer.json
+++ b/devcontainer.json
@@ -4,7 +4,7 @@
 		"dockerfile": "Dockerfile",
 		"context": "../"
 	},
-	"postCreateCommand": "postCreateCommand.sh",
+	"postCreateCommand": "./postCreateCommand.sh",
 	"customizations": {
 		"vscode": {
 			"extensions": [
