Update to use external Dockerfile

--- a/devcontainer.json
+++ b/devcontainer.json
@@ -1,10 +1,10 @@
 { 
 	"name": "Python 3", 
 	"build": {
-		"dockerfile": "Dockerfile",
+		"dockerfile": "../Dockerfile",
 		"context": "../"
 	},
-	"postCreateCommand": ".devcontainer/postCreateCommand.sh",
+	"postCreateCommand": "../postCreateCommand.sh",
 	"customizations": {
 		"vscode": {
 			"extensions": [
