--- a/devcontainer.json
+++ b/devcontainer.json
@@ -5,7 +5,7 @@
 		"context": "../",
 		"target": "develop"
 	},
-	"postCreateCommand": "./.devcontainer/postCreateCommand.sh",
+	"postCreateCommand": "chmod +x .devcontainer/postCreateCommand.sh && .devcontainer/postCreateCommand.sh",
 	"customizations": {
 		"vscode": {
 			"extensions": [
